Fixed Java deprecation warnings